--- a/src/CSS/Calendar.css
+++ b/src/CSS/Calendar.css
@@ -2,14 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 .wrapper {
-  width: 300px;
+  width: 15rem;
   background: transparent;
 }
 .wrapper header {
   display: flex;
   align-items: center;
-  padding: 25px 30px 10px;
-  justify-content: space-between;
+  justify-content: space-around;
+  width: 100%;
 }
 header .icons {
   display: flex;
@@ -37,7 +37,7 @@ header .current-date {
   font-weight: 500;
 }
 .calendar {
-  padding: 20px;
+  padding-top: 20px;
 }
 .calendar ul {
   display: flex;
