--- a/src/CSS/TopLeagues.css
+++ b/src/CSS/TopLeagues.css
@@ -7,7 +7,7 @@
   gap: 0.5rem;
   margin-bottom: 1rem;
 }
-.topleagues a {
+.topleagues div {
   width: 100%;
   display: flex;
   align-items: center;
@@ -26,7 +26,7 @@
   gap: 0.3rem;
 }
 
-.topleagues a .leagues-container img {
+.topleagues div .leagues-container img {
   width: 1.6rem;
   height: 1.6rem;
 }
